--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
   - type: web
     name: epetcare
     env: python
+    repo: https://github.com/Mobahiro/epetcare.git
+    branch: main
     buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
     startCommand: gunicorn epetcare.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
