--- a/vet_desktop_app/requirements.txt
+++ b/vet_desktop_app/requirements.txt
@@ -7,6 +7,9 @@ Pillow>=9.0.0
 # HTTP requests for network features
 requests>=2.25.0
 
+# Database support
+psycopg2-binary>=2.9.9  # PostgreSQL support
+
 # Additional utilities
 pathlib2>=2.3.0
 typing-extensions>=3.10.0
