--- a/render.yaml
+++ b/render.yaml
@@ -8,15 +8,21 @@ services:
     env: python
     repo: https://github.com/Mobahiro/epetcare.git
     branch: main
-    buildCommand: ./build.sh
-    startCommand: gunicorn epetcare.wsgi:application --bind 0.0.0.0:$PORT
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: gunicorn epetcare.wsgi:application --bind 0.0.0.0:$PORT --log-level debug
     envVars:
       - key: PYTHON_VERSION
-        value: 3.13.0
+        value: 3.11.4  # Using a more stable Python version
       - key: WEB_CONCURRENCY
         value: 4  # Number of Gunicorn workers
+      - key: DJANGO_SETTINGS_MODULE
+        value: epetcare.settings  # Use the main settings file directly
       - key: RENDER
         value: true
+      - key: DEBUG
+        value: false
+      - key: ALLOWED_HOST
+        value: epetcare.onrender.com
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
