--- a/vet_desktop_app/config.json
+++ b/vet_desktop_app/config.json
@@ -1,24 +1,24 @@
 {
+    "postgres": {
+        "host": "dpg-d3an6aggjchc73cpr5i0-a.oregon-postgres.render.com",
+        "port": 5432,
+        "database": "epetcare_database",
+        "user": "shiro",
+        "password": "AfsXuq5zLnQMRn0iFSAxxIV4tYB8tYnG",
+        "sslmode": "require",
+        "database_url": "postgresql://shiro:AfsXuq5zLnQMRn0iFSAxxIV4tYB8tYnG@dpg-d3an6aggjchc73cpr5i0-a.oregon-postgres.render.com/epetcare_database"  
+    },
     "database": {
-        "path": "C:\\epetcare\\data\\db.sqlite3",
-        "backup_dir": "backups",
-        "real_time_sync": true
+        "path": "C:/epetcare/db.sqlite3",
+        "backup_dir": "backups"
     },
     "app": {
         "offline_mode": false,
-        "sync_interval": 5,
+        "sync_interval": 300,
         "auto_backup": true
     },
     "ui": {
         "theme": "light",
         "font_size": 10
-    },
-    "remote_database": {
-        "enabled": true,
-        "url": "https://epetcare.onrender.com/vet_portal/api",
-        "username": "YOUR_VET_USERNAME",
-        "password": "YOUR_VET_PASSWORD",
-        "sync_interval": 30,
-        "auto_sync": true
     }
 }
