--- a/render.yaml
+++ b/render.yaml
@@ -8,11 +8,11 @@ services:
     env: python
     repo: https://github.com/Mobahiro/epetcare.git
     branch: main
-  buildCommand: chmod +x build.sh && ./build.sh
-  startCommand: "bash -lc 'python manage.py migrate --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT --log-level info'"
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: "bash -lc 'python manage.py migrate --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT --log-level info'"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.4  # Using a more stable Python version
+        value: 3.11.4
       - key: WEB_CONCURRENCY
         value: 4  # Number of Gunicorn workers
       - key: DJANGO_SETTINGS_MODULE
